--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Savan",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "mongoose": "^7.2.1"
   },
