--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proshop",
+  "name": "Swiftkart",
   "version": "1.0.0",
   "description": "E-commerce web application build with MERN stack",
   "type": "module",
